Fix sniper scope not covering full screen

--- a/code/swb_base/ui/SniperScope.cs.scss
+++ b/code/swb_base/ui/SniperScope.cs.scss
@@ -46,13 +46,13 @@
 	.leftBarOffscreen {
 		top: -50%;
 		left: -100%;
-		height: 200%;
+		height: 400%;
 	}
 
 	.rightBarOffscreen {
 		top: -50%;
 		right: -100%;
-		height: 200%;
+		height: 400%;
 	}
 
 	.topBar {
